# peel-off

./: Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yaml  commit-message-check.yml
src/: lib.rs  peel.rs  peeled.rs
